# novitus-noviapi

./: .gitignore  .pre-commit-config.yaml  RC_CHECKLIST.md  README.md  pyproject.toml
.github/workflows/: ci.yml
contracts/openapi/: dist.json  manifest.json
docs/: ci-cd-artifact-test-learnings.md  hardware-testing.md
scripts/: update_contract_spec.py
src/noviapi/: __init__.py  _hardware_polling.py  _release_smoke.py  client.py  exceptions.py  models.py
tests/: conftest.py
tests/contract/: test_openapi_contract.py
tests/hardware/: test_comm_test.py  test_nf_printout.py  test_queue_status.py  test_status_flow.py
tests/integration/: test_async_client.py  test_sync_client.py
tests/unit/: test_artifacts.py  test_ci_workflow.py  test_client_configuration.py  test_exceptions.py  test_hardware_docs.py  test_hardware_polling.py  test_hardware_scaffold.py  test_models.py  test_readme.py  test_release_metadata.py  test_release_smoke.py  test_update_contract_spec.py
